--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,8 +6,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFMapControlPrototype"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1000">
+        Title="WPF Map Control Prototype" Height="800" Width="1000">
     <Grid>
-        <m:Map x:Name="myMap"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="400" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.ColumnSpan="2"
+                   Margin="10" FontWeight="Bold"
+                   Text="Map Prototype in WPF" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+        <m:Map Grid.Row="1" Grid.Column="0" x:Name="myMap" />
+        <WebBrowser Grid.Row="1" Grid.Column="1" x:Name="webBrowser" />
     </Grid>
 </Window>
